@@ -1,3 +1,7 @@
+Changelog v5.2.40 (2025-08-12):
+- Added Two New Presets
+- Updated database
+
 Changelog v5.2.39 (2025-07-30):
 - Updated embed extractor
 - Updated database
